# gnn_robotics

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_docker.sh
.github/workflows/: PyTest.yml
src/: main.py  run_ant.py  show_screen_info.py  start_screen_session.py
src/agents/: EGAT_method.py  GAT.py  GAT_method.py  __init__.py  feed_forward.py  function_approximators.py  method1.py  method2.py  method5.py  nerve_net.py  ppo.py  skrl_adapting_class.py
src/agents/GNN_Layers/: EGAT.py  GAT.py  __init__.py  messages.py
src/environments/: ModularEnv.py  ant.py  hopper.py  humanoid.py  mujoco_parser.py  mujoco_utils.py
src/environments/assets/: ant.xml
src/utils/: __init__.py  analyse_data.py  asset_generator.py  gnn_util.py  hyperparameters.yaml  logger_config.py  misc_utils.py  mujoco_parser.py  register.py  torch_scatter.py
tests/: test_main.py
tests/environments/: test_learns.py  test_mujoco_parser.py
