[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn_robotics"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "standard-imghdr>=3.13.0",
    "six>=1.17.0",
    "gymnasium>=1.1.1",
    "matplotlib>=3.10.1",
    "pytest",
    "torch",
    "torch-geometric",
    "yamllib",
    "xmltodict",
    "stable-baselines3",
    "gymnasium[mujoco]",
]
 # Add only the directories you need as packages
[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
addopts = "-m 'not manual' --ignore=libs" # ignore the manual tests'
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "manual: marks a test as requiring manual execution",
]

